--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,6 @@ jobs:
         
       - name: Test
         run: mvn test
+
+      - name: Build docker image
+        run: docker build . --file Dockerfile --tag sample-img:$(date +%s)
