--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ "github-actions" ]
+    branches: [ "jenkins" ]
   pull_request:
-    branches: [ "github-actions" ]
+    branches: [ "jenkins" ]
 
 jobs:
   build:
